syntax = "proto3";

option csharp_namespace = "GrpcShutdownTest";

package grpc_shutdown_test;

service ShutdownTest {
  rpc LongRunningTask (LongRunningTaskRequest) returns (LongRunningTaskReply);
  rpc Shutdown (ShutdownRequest) returns (ShutdownReply);
}

message LongRunningTaskRequest {
}

message LongRunningTaskReply {
  bytes file_content = 1;
}

message ShutdownRequest {
}

message ShutdownReply {
}